WebApp: add styles to SelectionPanel

--- a/webapp/src/ui/vending-machine/VendingMachine.module.css
+++ b/webapp/src/ui/vending-machine/VendingMachine.module.css
@@ -1,5 +1,12 @@
 .vending-machine {
   height: 100%;
-  background-color: #1B1B1B;
+  background-color: #393646;
   padding: 1rem;
+}
+
+.bottom {
+  display: flex;
+  padding: 2rem;
+  justify-content: space-between;
+  align-items: center;
 }
