--- a/webapp/src/ui/vending-machine/VendingMachine.module.css
+++ b/webapp/src/ui/vending-machine/VendingMachine.module.css
@@ -5,8 +5,10 @@
 }
 
 .bottom {
-  display: flex;
   padding: 2rem;
+  display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
