WebApp: update styles

--- a/webapp/src/ui/drink/Drink.module.css
+++ b/webapp/src/ui/drink/Drink.module.css
@@ -1,7 +1,18 @@
 .drink {
   text-align: center;
-  padding-top: 2rem;
   flex-grow: 1;
+  width: 150px;
+  position: relative;
+}
+
+.drink:before {
+  content: "";
+  position: absolute;
+  background-color: #bcc6cc;
+  height: 80px;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .drink-image {
@@ -11,7 +22,7 @@
   justify-content: center;
   height: 200px;
   padding: 0 .2rem;
-  bottom: -1.2rem;
+  bottom: -25px;
 }
 
 .drink-image img {
@@ -27,9 +38,11 @@
   font-size: 0.8rem;
   font-weight: bold;
   padding: .2rem .5rem;
+  border-bottom: 1px solid black;
 }
 
 .drink-code {
+  position: relative;
   background-image: linear-gradient( to bottom, #bcc6cc, #eee, #bcc6cc);
   padding: .4rem 0;
 }
