--- a/webapp/src/ui/drinks-displayer/DrinksDisplayer.module.css
+++ b/webapp/src/ui/drinks-displayer/DrinksDisplayer.module.css
@@ -1,11 +1,13 @@
 .drinks-displayer {
+  flex-grow: 1;
   display: flex;
   flex-wrap: wrap;
+  align-items: start;
   background-image: url('/src/assets/img/ice.jpg');
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 2rem;
   border-radius: 1rem;
-  overflow: hidden;
+  overflow: auto;
 }
